# demo

./: .gitignore  pyproject.toml  readme.md
cffi_example/: package.sh  readme.md  setup.py
cffi_example/daslic/: api.py  daslic_build.py
cffi_example/include/: daslic_api.h
clickhousecsv/: ck_sql.sql  csv_write.py  data.csv  generate_event.py  sql_data.csv
markdowninlinepic/: main.py  readme.md
pip_source_downloader/: download.py  readme.md
rsyslog_tls/: ca-cert.pem  ca.tmpl  handlers.py  main.py  readme.txt  server.tmpl  worker.py
sftp/: asyncssh-sftp.py  http_asyncssh_sftp.py  http_paramiko_sftp.py  http_server.py  http_sftp.py  main.py  new_http_sftp.py  readme.md  test_upload.py  xxx.py
spotify_web_themes/: light_spotify_web.css
