[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "py-spy>=0.3.14",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "streaming-form-data>=1.11.0",
    "fastapi>=0.94.1",
    "uvicorn>=0.21.1",
    "paramiko>=3.1.0",
    "asyncssh>=2.13.1",
    "pyOpenSSL>=23.0.0",
]

requires-python = ">=3.8"
license = {text = "MIT"}
